fix_breadcumbs and size contrast

--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,11 @@ body {
 }
 
 body.text-large {
-    --font-base-size: 20px;
+    --font-base-size: 22px;
 }
 
 body.text-small {
-    --font-base-size: 14px;
+    --font-base-size: 12px;
 }
 
 /* Reset Básico */
@@ -185,9 +185,10 @@ h6 {
 .breadcrumbs {
     margin-top: 1rem;
     font-size: 0.85em;
-    color: #b2dfdb;
+    color: var(--bg-color);
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     padding-top: 0.5rem;
+    font-weight: bold;
 }
 
 /* Main Content */
